--- a/page.html
+++ b/page.html
@@ -6,39 +6,35 @@
     <title>Home Page Login</title>
 
     <style>
-        body {
+       body {
             margin: 0;
             font-family: Arial, sans-serif;
             display: flex;
             height: 100vh;
         }
 
-        /* Left Side Image */
         .left {
+            size: 5px;
             flex: 1;
-            background-image: url('https://via.placeholder.com/800x800');
-            background-size: cover;
+            background-image: url(https://img.freepik.com/free-vector/hand-drawn-multitask-business-woman-illustrated_23-2148818039.jpg?semt=ais_hybrid&w=740&q=80);
             background-position: center;
         }
-
-        /* Right Side Login Card */
         .right {
             flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
-            background: #f5f5f5;
+            background-color: aqua;
         }
 
-        .login-card {
-            width: 350px;
-            padding: 30px;
+        .card {
+            width: 300px;
+            padding: 35px;
             background: white;
-            box-shadow: 0px 0px 20px rgba(0,0,0,0.1);
-            border-radius: 10px;
+            border-radius: 20px;
         }
 
-        .login-card h2 {
+        .card h2 {
             text-align: center;
             margin-bottom: 20px;
         }
@@ -54,16 +50,15 @@
         .login-card button {
             width: 100%;
             padding: 12px;
-            background: #007bff;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            font-size: 16px;
+            background-color: aliceblue;
+            color: rgb(155, 135, 135);
+            border-radius: 7px;
+            font-size: 18px;
             cursor: pointer;
         }
 
         .login-card button:hover {
-            background: #0056b3;
+            background: #394b5e;
         }
     </style>
 </head>
