--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -101,4 +101,26 @@
     </nav>
 </body>
 
+
 </html>
+
+
+
+
+
+
+
+
+
+<div class="dropdown ms-2">
+    <button class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown">
+        <i class="bi bi-person-circle"></i>
+    </button>
+    <ul class="dropdown-menu dropdown-menu-end p-3" style="width:250px;">
+        <li>
+            <input type="text" class="form-control mb-2" placeholder="Username">
+            <input type="password" class="form-control mb-2" placeholder="Password">
+            <button class="btn btn-primary w-100">Login</button>
+        </li>
+    </ul>
+</div>
