--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -105,14 +105,112 @@
 </html>
 
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Online Shopping Wishlist</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="bg-light">
+
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Online Shopping Wishlist</h2>
+
+    <div class="row">
+        <!-- Wishlist Table -->
+        <div class="col-md-8">
+            <table class="table table-bordered table-striped text-center">
+                <thead class="table-dark">
+                    <tr>
+                        <th>User</th>
+                        <th>Product</th>
+                        <th>Category</th>
+                        <th>Price</th>
+                        <th>Date</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Harnitha</td>
+                        <td>Laptop</td>
+                        <td>Electronics</td>
+                        <td>₹55,000</td>
+                        <td>27-12-2025</td>
+                        <td>
+                            <button class="btn btn-sm btn-primary">Edit</button>
+                            <button class="btn btn-sm btn-danger">Delete</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Suresh</td>
+                        <td>Headphones</td>
+                        <td>Accessories</td>
+                        <td>₹2,500</td>
+                        <td>27-12-2025</td>
+                        <td>
+                            <button class="btn btn-sm btn-primary">Edit</button>
+                            <button class="btn btn-sm btn-danger">Delete</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Wishlist Form -->
+        <div class="col-md-4">
+            <div class="card shadow">
+                <div class="card-body">
+                    <h5 class="card-title text-center mb-3">Add to Wishlist</h5>
+
+                    <form>
+                        <div class="mb-2">
+                            <input type="text" class="form-control" placeholder="User Name">
+                        </div>
+
+                        <div class="mb-2">
+                            <input type="text" class="form-control" placeholder="Product Name">
+                        </div>
+
+                        <div class="mb-2">
+                            <input type="text" class="form-control" placeholder="Category">
+                        </div>
+
+                        <div class="mb-2">
+                            <input type="number" class="form-control" placeholder="Price">
+                        </div>
+
+                        <div class="mb-3">
+                            <input type="date" class="form-control">
+                        </div>
+
+                        <div class="d-grid">
+                            <button type="submit" class="btn btn-success">
+                                Save Wishlist
+                            </button>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</body>
+</html>
 
 
 
 
 
 
-
-<div class="dropdown ms-2">
+div
+< class="dropdown ms-2">
     <button class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown">
         <i class="bi bi-person-circle"></i>
     </button>
@@ -124,3 +222,4 @@
         </li>
     </ul>
 </div>
+
